--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,26 @@ h1 {
 	text-shadow: 5px 5px 4px #000000;
 	text-align: center;
 }
+
+header {
+	padding: 15px;
+	position: sticky;
+	top: 0;
+	right: 0;
+	left: 0;
+	background-color: rgb(0, 0, 0, 0.5);
+}
+
+header nav {
+	display: flex;
+	justify-content: space-between;
+}
+
+header nav ul {
+	display: flex;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	justify-content: flex-end;
+	align-items: center;
+}
